# GradPhi

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  tests.yml
gradphi/autodiff/: __init__.py  tensor.py  variable.py
gradphi/loss/: mse.py
gradphi/nn/: __init__.py
gradphi/nn/activations/: mish.py  relu.py  sigmoid.py  softplus.py  swish.py  tanh.py
gradphi/nn/layers/: dense.py
gradphi/nn/loss/: __init__.py  mse.py
gradphi/nn/optimizers/: adam.py
tests/activations/: relu_test.py
tests/layers/: dense_test.py
